# RAG-chatbot

./: .env.sample  .gitignore  Dockerfile  README.md  app.py  deployment.yaml  makefile  pyproject.toml
src/rag_chatbot/: data_loader.py  rag_indexing.py  rag_retrieval.py
static/: script.js
templates/: index.html
tests/: test_document_loader.py  test_rag_indexing.py  test_rag_retriever.py
